Fixed highlited area being too big

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -21,9 +21,10 @@
 }
 
 .student-item {
-	margin: 5px 10px;
+	margin: 0 auto;
 	border-radius: 5px;
 	transition: all .15s linear;
+	width: 200px;
 }
 
 .student-name {
